# Diplom

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
services/: __init__.py  index.py  metric_funcs.py  process_funcs.py
services/baseline/: calibration_utils.py  data_process_utils.py
services/common/: calculation_utils.py  calibration_heads.py  llm_interface.py  logging_utils.py
services/experiment/: calibration_utils.py
services/experiment/cot/: data_process_utils.py
services/experiment/cropped/: data_process_utils.py
tasks/: beta_calibration.ipynb  llama3.1_MMLU-PRO_model_launch.ipynb  llama3.1_ThrutfulQA_model_launch.ipynb  llama3.1_beta_calibration.ipynb  llama3.1_temperature_scaling_calibration.ipynb  model_launch.ipynb  qwen2.5_MMLU-PRO_model_launch.ipynb  qwen2.5_ThrutfulQA_model_launch.ipynb  qwen2.5_beta_calibration.ipynb  qwen2.5_temperature_scaling_calibration.ipynb  temperature_scaling_calibration.ipynb  token_wise_aggregation_callibration.ipynb
tasks/baseline_calibrations/llama3/MMLU-PRO/: llama3_MMLU-PRO.ipynb
tasks/baseline_calibrations/llama3/RACE/: llama3_RACE.ipynb
tasks/baseline_calibrations/mistral0.3/: mistral0.3_MMLU-PRO_beta_calibration.ipynb  mistral0.3_MMLU-PRO_temperature_scaling_calibration.ipynb  mistral0.3_RACE_beta_calibration.ipynb  mistral0.3_RACE_temperature_scaling_calibration.ipynb
tasks/baseline_calibrations/qwen2.5/: qwen2.5_MMLU-PRO_beta_calibration.ipynb  qwen2.5_MMLU-PRO_temperature_scaling_calibration.ipynb  qwen2.5_RACE_beta_calibration.ipynb  qwen2.5_RACE_temperature_scaling_calibration.ipynb
tasks/baseline_calibrations/qwen2.5/MMLU-PRO/: qwen2.5_MMLU-PRO.ipynb
tasks/baseline_calibrations/qwen2.5/RACE/: qwen2.5_RACE.ipynb
tasks/baselines/: llama3.1_beta_calibration.ipynb  llama3.1_temperature_scaling_calibration.ipynb  qwen2.5_beta_calibration.ipynb  qwen2.5_temperature_scaling_calibration.ipynb
tasks/experiment_calibrations/llama3/MMLU-PRO/cot/: llama3_MMLU-PRO_cot_(attn only scores).ipynb  llama3_MMLU-PRO_cot_(attn+final scores).ipynb
tasks/experiment_calibrations/llama3/MMLU-PRO/cropped/: llama3_MMLU-PRO_cropped_(attn only scores).ipynb  llama3_MMLU-PRO_cropped_(attn+final scores).ipynb
tasks/experiment_calibrations/llama3/RACE/cot/: llama3_RACE_cot_(attn only scores).ipynb  llama3_RACE_cot_(attn+final scores).ipynb
tasks/experiment_calibrations/llama3/RACE/cropped/: llama3_RACE_cropped_(attn only scores).ipynb  llama3_RACE_cropped_(attn+final scores).ipynb
tasks/experiment_calibrations/mistral0.3/: mistral0.3_MMLU-PRO_cropped_attn+beta_calibration.ipynb  mistral0.3_MMLU-PRO_cropped_attn+beta_calibration_mod.ipynb  mistral0.3_RACE_cropped_attn+beta_calibration.ipynb  mistral0.3_RACE_cropped_attn+beta_calibration_mod.ipynb
tasks/experiment_calibrations/qwen2.5/: qwen2.5_MMLU-PRO_cropped_attn+beta_calibration.ipynb  qwen2.5_MMLU-PRO_cropped_attn+beta_calibration_mod.ipynb  qwen2.5_RACE_cropped_attn+beta_calibration_mod.ipynb
tasks/experiment_calibrations/qwen2.5/MMLU-PRO/cot/: qwen2.5_MMLU-PRO_cot_(attn only scores).ipynb  (+1 more)
tasks/launches/: llama3.1_MMLU-PRO_model_launch.ipynb  llama3.1_ThrutfulQA_model_launch.ipynb  qwen2.5_MMLU-PRO_model_launch.ipynb  qwen2.5_ThrutfulQA_model_launch.ipynb
tasks/launches/llama3/: llama3_MMLU-PRO_launch_attn_cropped.ipynb  llama3_MMLU-PRO_launch_reasoning.ipynb  llama3_RACE_launch_attn_cropped.ipynb  llama3_RACE_launch_reasoning.ipynb
tasks/launches/mistral0.3/: mistral0.3_MMLU-PRO_launch_attn_cropped.ipynb  mistral0.3_MMLU-PRO_launch_reasoning.ipynb  mistral0.3_RACE_launch_attn_cropped.ipynb
tasks/launches/qwen2.5/: qwen2.5_MMLU-PRO_launch_attn_cropped.ipynb  qwen2.5_MMLU-PRO_launch_reasoning.ipynb  qwen2.5_RACE_launch_attn_cropped.ipynb  qwen2.5_RACE_launch_reasoning.ipynb
(+6 files in other folders)
