[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hallucination_Research"
version = "0.1.0"
description = "Calibration and evaluation utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
# Install runtime deps: pip install -r requirements.txt
dependencies = [
    "accelerate==1.3.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "datasets==4.4.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "dill==0.4.0",
    "distro==1.9.0",
    "einops==0.8.1",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jiter==0.12.0",
    "joblib==1.5.2",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "langchain-core==1.2.7",
    "langchain-huggingface==1.2.0",
    "langchain-openai==1.1.7",
    "langsmith==0.6.4",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multiprocess==0.70.18",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "numpy==2.3.5",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "openai==2.15.0",
    "orjson==3.11.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "pip==26.0.1",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.1.3",
    "psycopg2-binary==2.9.11",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "safetensors==0.6.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "tokenizers==0.21.4",
    "torch==2.5.1",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.51.3",
    "triton==3.1.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uuid-utils==0.14.0",
    "wcwidth==0.2.14",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "zstandard==0.25.0",
]

[project.optional-dependencies]
# Convenience alias; full stack remains in requirements.txt
dev = [
    "ipython",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*"]
